refactor(core): 升级Spring Boot和依赖并重构代码结构
- 升级Spring Boot版本到3.5.15，Java版本到17
- 替换javax至jakarta包依赖，兼容新版规范
- 移除导入和导出相关EasyExcel服务及控制器，拆分职责
- 重命名枚举类ErrorCodeEnum为ErrorCode，ExportStatusEnum为ExportStatus，调整相关引用
- 优化Mybatis Plus版本与配置，修正分页排序方法
- 使用Hutool替代Apache Commons工具类，统一字符串工具调用
- 完成Drools框架版本升级及相关配置调整
- 使用Lombok的@RequiredArgsConstructor替代@Resource进行依赖注入优化
- 调整消息相关接口为POST方法，改进消息发送控制器和发送者构造
- 优化Jackson配置，由application.properties管理忽略大小写及命名策略
- 配置文件调整Redis、线程池、日志及管理端点属性
- 添加数据库初始化脚本支持，包含用户表和导出任务表创建
- 删除冗余配置及未使用代码，代码风格统一格式化调整