@@ -1,4 +1,4 @@
-package com.ltx.easyexcel.service;
+package com.ltx.service;
 
 import com.alibaba.excel.EasyExcel;
 import com.alibaba.excel.support.ExcelTypeEnum;
@@ -9,30 +9,43 @@ import com.ltx.entity.po.User;
 import com.ltx.entity.request.ExportRequestBody;
 import com.ltx.mapper.ExportTaskMapper;
 import com.ltx.mapper.UserMapper;
+import lombok.RequiredArgsConstructor;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import org.springframework.http.HttpHeaders;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
 
-import javax.annotation.Resource;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponse;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 /**
+ * 用户导出服务类
+ *
  * @author tianxing
  */
 @Service
 @Slf4j
-public class ExportService {
+@RequiredArgsConstructor
+public class UserExportService {
 
-    @Resource
-    private UserMapper userMapper;
+    private final UserMapper userMapper;
+    private final ExportTaskMapper exportTaskMapper;
 
-    @Resource
-    private ExportTaskMapper exportTaskMapper;
+    /**
+     * 获取用于导出的用户列表
+     *
+     * @return 用户列表
+     */
+    public List<User> getExportUsers() {
+        // 查询前10个用户
+        Page<User> pageParam = new Page<>(1, 10);
+        pageParam.setSearchCount(false);
+        return userMapper.selectPage(pageParam, null).getRecords();
+    }
 
     /**
      * 导出文件到浏览器
@@ -47,7 +60,7 @@ public class ExportService {
         String fileName = requestBody.getFileName();
         List<String> fieldList = requestBody.getFieldList();
         response.setContentType("text/csv;charset=UTF-8");
-        fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8.name());
+        fileName = URLEncoder.encode(fileName, StandardCharsets.UTF_8);
         response.setHeader(HttpHeaders.CONTENT_DISPOSITION, "attachment;filename=" + fileName);
         EasyExcel.write(response.getOutputStream(), clazz).excelType(excelType)
                 .registerWriteHandler(new CustomCellStyleStrategy())
@@ -82,7 +95,7 @@ public class ExportService {
         String fileName = String.format("%s-%d-%d", requestBody.getFileName(), userId, System.currentTimeMillis());
         // 插入导出任务
         exportTaskMapper.insertExportTask(userId, fileName);
-        List<User> userList = userMapper.selectAll();
+        List<User> userList = userMapper.selectList(null);
         exportToLocal(userList, requestBody);
         // 更新导出状态
         exportTaskMapper.updateExportStatus(userId, fileName);
